# dynamic_multi_reducer

./: Cargo.toml  README.md
examples/: main.rs
src/: connect.rs  error.rs  event.rs  lib.rs  reducer.rs  stream.rs
