[package]
name = "dynamic_multi_reducer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
thiserror = "2.0.12"
futures = "0.3.27"
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = "0.1.12"
bytes = "1.3.0"
log = { version = "0.4.20", features = ["release_max_level_off"] }
fast-socks5 = "0.9.1"
crossbeam-channel = "0.5.11"
[dev-dependencies]
